tests/snapshots/cli__full_baseline.snap
---
source: tests/cli.rs
expression: output_full
---
--- exit code ---
1
--- stdout ---
test.py:2:5: [nested-function] Function `inner` is defined inside another function.
  Rationale: A nested named function captures the enclosing scope implicitly and cannot be imported or tested on its own.
  Suggestion: Extract `inner` to a module-level private function (`_inner`), or use an inline `lambda` for a trivial callback.

test.py:5:5: [nested-function] Function `world` is defined inside another function.
  Rationale: A nested named function captures the enclosing scope implicitly and cannot be imported or tested on its own.
  Suggestion: Extract `world` to a module-level private function (`_world`), or use an inline `lambda` for a trivial callback.

For details on a rule, run: omni-code-lint --explain <rule>

--- stderr ---
