tests/snapshots/cli__tag_jujutsu.snap
---
source: tests/cli.rs
expression: "output.replace(binary, \"<binary>\")"
---
--- exit code ---
0
--- stdout ---
- `no-edits-on-described-commits` (command): Blocks `jj edit` on a commit that already has a description.

--- stderr ---
