tests/snapshots/cli__tag_without_list.snap
---
source: tests/cli.rs
expression: "output.replace(binary, \"<binary>\")"
---
--- exit code ---
2
--- stdout ---

--- stderr ---
error: the following required arguments were not provided:
  --list-rules

Usage: <binary> --list-rules --tag <LABEL> [PATHS]...

For more information, try '--help'.
